<resources>
    <string name="app_name">StoreApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="users">Users</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="cart_items">Cart Items</string>
    <string name="clear_cart">clear cart</string>
    <string name="buyAll">BuyAll</string>
    <string name="remove_from_cart">Remove from Cart</string>
    <string name="check_out">Check Out</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="total_0">Total:</string>
    <string name="payment">Payment</string>
    <string name="please_select_your_payment_mode">Please select your payment mode</string>
    <string name="card">Card</string>
    <string name="cash">Cash</string>
    <string name="place_order">Place Order</string>
    <string name="placed_on_01_jun_2025_09_30_am">Placed on: 01 Jun 2025, 09:30 AM</string>
    <string name="your_orders">Your Orders</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="order_details_not_available">Order details not available.</string>
    <string name="you">You</string>
    <string name="carts">Cart</string>
    <string name="your_carts">Your Carts</string>
    <string name="check_your_carts">check your carts</string>
    <string name="need_your_help">Need Your Help?</string>
    <string name="visit_customer_service">Visit Customer Service</string>
    <string name="your_account">Your Account</string>
    <string name="who_is_shopping">Who is Shopping?</string>
    <string name="sign_out">Sign Out</string>
    <string name="notifications">Notifications</string>
    <string name="permissions">Permissions</string>
    <string name="default_purchase_settings">Default Purchase Settings</string>
    <string name="legal_and_about">Legal and About</string>
    <string name="app_settings">App Settings</string>
    <string name="please_enable_notifications_to_stay_up_to_date">Please enable notifications to stay up to date.</string>
    <string name="please_enable_necessary_permissions_e_g_storage_notifications_for_full_functionality">Please enable necessary permissions (e.g., storage, notifications) for full functionality.</string>
    <string name="currently_there_are_no_default_purchase_preferences_configured">Currently, there are no default purchase preferences configured.</string>
    <string name="sign_up">Sign Up</string>
</resources>